syntax = "proto3";

option java_multiple_files = true;
option java_package = "notification";


message MessageSocket {
    string userId=1;
    string message=2;
}